--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install build tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential
+        run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Build Exsh
-        run: make
-
-      - name: Clean build artifacts
-        run: make clean
+        run: |
+          if [ -f Makefile ]; then
+            make
+          elif [ -f src/Makefile ]; then
+            make -C src
+          else
+            echo "No Makefile found"
+            exit 1
+          fi
