--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,16 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install build tools
-        run: sudo apt-get update && sudo apt-get install -y build-essential
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libreadline-dev
 
       - name: Build Exsh
-        run: |
-          if [ -f Makefile ]; then
-            make
-          elif [ -f src/Makefile ]; then
-            make -C src
-          else
-            echo "No Makefile found"
-            exit 1
-          fi
+        run: make -C src
